--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Explore the stunning portfolio website of Buwaneka Sumanasekara, showcasing his creative work and unique design style. Get inspired by his projects and discover the talent behind this impressive online showcase." />
+  <meta name="description" content="Explore the stunning portfolio website of Buwaneka Sumanasekara, showcasing his Software development skils. Get inspired by his projects and discover the talent behind this impressive online showcase." />
 
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
