--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Explore the stunning portfolio website of Buwaneka Sumanasekara, showcasing his Software development skils. Get inspired by his projects and discover the talent behind this impressive online showcase." />
+  <meta name="title" content="Buwaneka Sumanasekara | Senior Software Engineer" />
+  <meta name="description" content="😀 Explore the stunning portfolio website of Buwaneka Sumanasekara, showcasing his Software development skils. Get inspired by his projects and discover the talent behind this impressive online showcase." />
 
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
@@ -26,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Hello, I'm Buwaneka 😀</title>
+  <title>Hello, I'm Buwaneka</title>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
